fix: footer line-height and revert gap

--- a/src/authentication/_styles.scss
+++ b/src/authentication/_styles.scss
@@ -71,7 +71,8 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
 
   font-size: 14px;
+  line-height: 17px;
 }
